# api/index.go
@@ -7,7 +7,7 @@ import (
 // IndexHandler Responde a nuestro request con un saludo
 // @Summary Devuelve un saludo
 // @Produce plain
-// @Success 200 {object} model.RespuestaClima
+// @Success 200 {string} string "Hello, Universe!"
 // @Failure 500 {object} model.HTTPError
 // @Router /api/ [get]
 func IndexHandler(c echo.Context) error {
