# docs/swagger.json
@@ -19,9 +19,9 @@
                 "summary": "Devuelve un saludo",
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Hello, Universe!",
                         "schema": {
-                            "$ref": "#/definitions/model.RespuestaClima"
+                            "type": "string"
                         }
                     },
                     "500": {
